--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,17 @@
                 </execution>
             </executions>
         </plugin>
+        <plugin>
+            <groupId>com.heroku.sdk</groupId>
+            <artifactId>heroku-maven-plugin</artifactId>
+            <version>3.0.4</version>
+            <configuration>
+                <appName>options-contract-selector</appName>
+                <processTypes>
+                    <web>java $JAVA_OPTS -Dserver.port=$PORT -cp target/classes:target/dependency/* com.techelevator.Application</web>
+                </processTypes>
+            </configuration>
+        </plugin>
     </plugins>
 </build>
 </project>
